@@ -1,8 +1,8 @@
 {
   "timestamp" : "2022-10-28T08:24:54Z",
-  "count" : 2,
-  "count_minmax" : [ 1, 3 ],
-  "count_decinc" : [ -1, +3 ],
+  "count" : 1,
+  "count_minmax" : [ 1, 1 ],
+  "count_decinc" : [ -0, +1 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
