@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-10-28T01:44:12Z",
+  "timestamp" : "2022-10-28T08:24:54Z",
   "count_outdated" : 603,
   "uniques_outdated" : 344,
   "count" : 648,
-  "uniques" : 370,
+  "uniques" : 371,
   "clones" : [
     {
       "timestamp": "2022-10-14T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "count_minmax": [ 1, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -98,6 +98,13 @@
     },
     {
       "timestamp": "2022-10-27T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-10-28T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
