@@ -1,3 +1,11 @@
+2022-10-28T08:24:54Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3343950527 # 976
+* notice: last 14d: unq all: 13 45
+* notice: prev accum: outdated-unq outdated-all / unq all: 344 603 / 370 648
+* notice: next accum: outdated-unq outdated-all / unq all: 344 603 / 371 648
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-10-14 2022-10-28]
+
 2022-10-28T01:44:12Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3342180245 # 975
 * notice: last 14d: unq all: 13 45
